--- a/HandsOnArchitectureComponents/app/build.gradle
+++ b/HandsOnArchitectureComponents/app/build.gradle
@@ -22,8 +22,8 @@ android {
         enabled = true
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -36,5 +36,11 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
     compile 'com.android.support:design:25.3.1'
     compile 'io.reactivex:rxandroid:0.23.0'
+
+    // For Lifecycles, LiveData, and ViewModel,
+    compile "android.arch.lifecycle:runtime:1.0.0-alpha1"
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
+
     testCompile 'junit:junit:4.12'
 }
