--- a/HandsOnArchitectureComponents/app/build.gradle
+++ b/HandsOnArchitectureComponents/app/build.gradle
@@ -41,6 +41,13 @@ dependencies {
     compile "android.arch.lifecycle:runtime:1.0.0-alpha1"
     compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
-
+    // For Room,
+    compile "android.arch.persistence.room:runtime:1.0.0-alpha1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha1"
+    // For testing Room migrations,
+    testCompile "android.arch.persistence.room:testing:1.0.0-alpha1"
+    // For Room RxJava support,
+    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha1"
+    
     testCompile 'junit:junit:4.12'
 }
