--- a/HandsOnArchitectureComponents/app/build.gradle
+++ b/HandsOnArchitectureComponents/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     testCompile "android.arch.persistence.room:testing:1.0.0-alpha1"
     // For Room RxJava support,
     compile "android.arch.persistence.room:rxjava2:1.0.0-alpha1"
-    
+    // ThreeTenABP
+    compile 'com.jakewharton.threetenabp:threetenabp:1.0.3'
+
     testCompile 'junit:junit:4.12'
 }
