--- a/HandsOnArchitectureComponents/app/build.gradle
+++ b/HandsOnArchitectureComponents/app/build.gradle
@@ -22,34 +22,47 @@ android {
         enabled = true
     }
     compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_8
-        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
     }
 }
+
+ext {
+    arch_version = '1.0.0-alpha1'
+    support_library_version = '25.3.1'
+    dagger_version = "2.8"
+    espresso_version = '2.2.2'
+    runner_version = '0.5'
+}
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile "com.android.support:appcompat-v7:${support_library_version}"
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
-    compile 'com.android.support:design:25.3.1'
+    compile "com.android.support:design:${support_library_version}"
+
     compile 'io.reactivex:rxandroid:0.23.0'
 
     // For Lifecycles, LiveData, and ViewModel,
-    compile "android.arch.lifecycle:runtime:1.0.0-alpha1"
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
+    compile "android.arch.lifecycle:runtime:${arch_version}"
+    compile "android.arch.lifecycle:extensions:${arch_version}"
+    annotationProcessor "android.arch.lifecycle:compiler:${arch_version}"
     // For Room,
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha1"
+    compile "android.arch.persistence.room:runtime:${arch_version}"
+    annotationProcessor "android.arch.persistence.room:compiler:${arch_version}"
     // For testing Room migrations,
-    testCompile "android.arch.persistence.room:testing:1.0.0-alpha1"
+    testCompile "android.arch.persistence.room:testing:${arch_version}"
     // For Room RxJava support,
-    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha1"
-    // ThreeTenABP
+    compile "android.arch.persistence.room:rxjava2:${arch_version}"
+    // ABP (java8)
     compile 'com.jakewharton.threetenabp:threetenabp:1.0.3'
-
+    // DI
+    compile "com.google.dagger:dagger:${dagger_version}"
+    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
+    provided 'javax.annotation:jsr250-api:1.0'
     testCompile 'junit:junit:4.12'
 }
