--- a/HandsOnArchitectureComponents/app/build.gradle
+++ b/HandsOnArchitectureComponents/app/build.gradle
@@ -41,15 +41,9 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$support_library_version"
     compile "com.android.support:design:$support_library_version"
 
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.8'
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
-    compile 'com.jakewharton.timber:timber:4.5.1'
     compile "com.google.dagger:dagger:${dagger_version}"
 
-    provided 'javax.annotation:jsr250-api:1.0'
 
     compile "android.arch.lifecycle:extensions:${arch_version}"
     compile "android.arch.persistence.room:runtime:${arch_version}"
@@ -88,4 +82,11 @@ dependencies {
 //    androidTestCompile("com.android.support.test.espresso:espresso-core:${espresso_version}") {
 //        exclude group: 'com.android.support', module: 'support-annotations'
 //    }
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.8'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+    compile 'com.jakewharton.timber:timber:4.5.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    provided 'javax.annotation:jsr250-api:1.0'
 }
